--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ layout: default
         </div>
         <p>Max was born in Gresham, but grew up in the foothills of Boise. They have tamed several packs of coyotes, and spent much time photosynthesizing with big sagebrush. They are currently raising a clutch of sage-grouse chicks in Portland, OR, as well as attending PSU (Portland State).</p>
         <p>Maxie is a poet, multidisciplinary artist, gardener, bad coder (re: this site), and more! Please forward all inquiries to their email, at the left of this page (or bottom, if you're on mobile).</p>        
-        <p>Maxwell has previously been published in Pathos litmag, Lurch Zine, Buckman Journal, Oroboro Lit Journal, and is now self-published! (Inquire via email if you'd like a copy of Turin Horse.)</p>
+        <p>Maxwell has previously been published in Pathos litmag, Lurch Zine, Buckman Journal, Oroboro Lit Journal, and Chimera.</p>
     </div>
     <p>&emsp;</p>
     <div>
