--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@ layout: default
 <h3>About</h3>
 <p>This page was originally forked and adapted from the <a href="https://github.com/pages-themes/minimal">minimal</a> Jekyll theme for GitHub pages, by <a href="https://github.com/orderedlist">orderedlist</a>. ("maxie.rodeo" is evolving and leaving Minimal behind...) The fonts used are <a href="https://fonts.google.com/specimen/Goblin+One?query=goblin+one">Goblin One</a>, by Riccardo De Franceschi, and <a href="https://fonts.google.com/specimen/Poltawski+Nowy">Półtawski Nowy</a>, by Adam Półtawski, Mateusz Machalski, Borys Kosmynka, and Ania Wieluńska. "maxie.rodeo" is being updated and managed by Maxwell Kline.</p>
 <p>All copyright belongs to Maxwell, unless I (Maxwell) state otherwise (or in a siuation where that statement is just outright untrue ;D ). Through the lens of derivatives, I am heavily considering the ethics of copyright. Expect changes on that front.</p>
+<map name="w95widget">
+<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="0,0,308,22" alt="no ai webring" title="no ai webring">
+<area href="https://baccyflap.com/noai/?prv&s=max" target="_top" shape="rect" coords="56,36,130,58" alt="previous" title="previous">
+<area href="https://baccyflap.com/noai/?rnd" target="_top" shape="rect" coords="137,36,211,58" alt="random" title="random">
+<area href="https://baccyflap.com/noai/?nxt&s=max" target="_top" shape="rect" coords="218,36,292,58" alt="next" title="next">
+</map>
+<img usemap="#w95widget" src="https://baccyflap.com/noai/w95widget.gif" alt="a gray Windows 95 style dialog box titled 'The No AI Webring' with a little icon showing a computer chip in a rubbish bin. beside it are three clickable buttons, labeled Previous, Random... and Next"> 
     </div>
     </div>
 </div>
