--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@ layout: default
         <div class="dropdown-content">
             <button class="index-nav-butts" onclick="opentabs('Publications')">Publications</button>
             <button class="index-nav-butts" onclick="opentabs('Zines')">Zines</button>
-        </div>  </div> <button class="index-nav-butts" onclick="opentabs('Stream')">Downstream</button>
-    <button class="index-nav-butts" onclick="opentabs('About')">About</button>
+        </div>  
+    </div> 
+            <button class="index-nav-butts" onclick="opentabs('Stream')">Downstream</button>
+            <button class="index-nav-butts" onclick="opentabs('About')">About</button>
 </div>
 
 <div id="Publications" class="tabs" style="display:none">
